--- a/non_personalised.ipynb
+++ b/non_personalised.ipynb
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
        "5   318: Shawshank Redemption, The (1994)  0.300000"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,17 +619,74 @@
     "\n",
     "# Male\n",
     "\n",
-    "\n",
-    "# Female"
+    "get_most_liked(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>34: Babe (1995)</td>\n",
+       "      <td>0.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>318: Shawshank Redemption, The (1994)</td>\n",
+       "      <td>0.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>541: Blade Runner (1982)</td>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    index         0\n",
+       "21                        34: Babe (1995)  0.400000\n",
+       "5   318: Shawshank Redemption, The (1994)  0.400000\n",
+       "15               541: Blade Runner (1982)  0.333333"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Female\n"
+    "# Female\n",
+    "get_most_liked(1)"
    ]
   },
   {
