add damped mean and lift calculation

--- a/non_personalised.ipynb
+++ b/non_personalised.ipynb
@@ -1911,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
@@ -1943,79 +1943,79 @@
        "    <tr>\n",
        "      <th>352</th>\n",
        "      <td>631.0</td>\n",
-       "      <td>4.897727</td>\n",
+       "      <td>4.898</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1197</th>\n",
        "      <td>2532.0</td>\n",
-       "      <td>4.810268</td>\n",
+       "      <td>4.810</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1572</th>\n",
        "      <td>3615.0</td>\n",
-       "      <td>4.545703</td>\n",
+       "      <td>4.546</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>496</th>\n",
        "      <td>1016.0</td>\n",
-       "      <td>4.489583</td>\n",
+       "      <td>4.490</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1163</th>\n",
        "      <td>2439.0</td>\n",
-       "      <td>4.489583</td>\n",
+       "      <td>4.490</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>202</th>\n",
        "      <td>340.0</td>\n",
-       "      <td>4.489583</td>\n",
+       "      <td>4.490</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>817</th>\n",
        "      <td>1649.0</td>\n",
-       "      <td>4.489583</td>\n",
+       "      <td>4.490</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>196</th>\n",
        "      <td>332.0</td>\n",
-       "      <td>4.377344</td>\n",
+       "      <td>4.377</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1277</th>\n",
        "      <td>2736.0</td>\n",
-       "      <td>4.329241</td>\n",
+       "      <td>4.329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1450</th>\n",
        "      <td>3213.0</td>\n",
-       "      <td>4.316907</td>\n",
+       "      <td>4.317</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      movieId      lift\n",
-       "352     631.0  4.897727\n",
-       "1197   2532.0  4.810268\n",
-       "1572   3615.0  4.545703\n",
-       "496    1016.0  4.489583\n",
-       "1163   2439.0  4.489583\n",
-       "202     340.0  4.489583\n",
-       "817    1649.0  4.489583\n",
-       "196     332.0  4.377344\n",
-       "1277   2736.0  4.329241\n",
-       "1450   3213.0  4.316907"
+       "      movieId   lift\n",
+       "352     631.0  4.898\n",
+       "1197   2532.0  4.810\n",
+       "1572   3615.0  4.546\n",
+       "496    1016.0  4.490\n",
+       "1163   2439.0  4.490\n",
+       "202     340.0  4.490\n",
+       "817    1649.0  4.490\n",
+       "196     332.0  4.377\n",
+       "1277   2736.0  4.329\n",
+       "1450   3213.0  4.317"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 334,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "lift_df.sort_values('lift', ascending=False)\\\n",
-    ".apply(lambda x: np.round(x, ))\n",
+    ".apply(lambda x: np.round(x, decimals=3), axis=1)\\\n",
     ".head(10)"
    ]
   }
